package domain.action;

import domain.model.GameState;

public class AttackAction implements CardAction {
    public void execute(GameState gameState) {}
}