package domain.action;

import domain.model.GameState;

public class NopeAction implements CardAction {
    public void execute(GameState gameState) {}
}