package domain.action;

import domain.model.GameState;

public class SeeTheFutureAction implements CardAction {
    public void execute(GameState gameState) {}
}