package domain.action;

import domain.model.GameState;

public class SkipAction implements CardAction {
    public void execute(GameState gameState) {}
}